// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAppleTheme test 1`] = `
Object {
  "colors": Object {
    "accentButtonBackground": "#0078d4",
    "accentButtonText": "#ffffff",
    "actionLink": "#323130",
    "actionLinkHovered": "#201f1e",
    "background": "#ffffff",
    "blockingBackground": "rgba(250, 65, 0, .2)",
    "bodyDivider": "#edebe9",
    "bodyFrameBackground": "#ffffff",
    "bodyFrameDivider": "#edebe9",
    "bodyStandoutBackground": "#faf9f8",
    "bodyText": "#323130",
    "bodyTextChecked": "#000000",
    "brandedBackground": "#0078d4",
    "brandedBorder": "#005a9e",
    "brandedCheckedBackground": "#c8c6c4",
    "brandedCheckedContent": "#201f1e",
    "brandedCheckedHoveredBackground": "#edebe9",
    "brandedCheckedHoveredContent": "#201f1e",
    "brandedContent": "#ffffff",
    "brandedDisabledBackground": "#f3f2f1",
    "brandedDisabledBorder": "#f3f2f1",
    "brandedDisabledContent": "#d2d0ce",
    "brandedDisabledIcon": "#d2d0ce",
    "brandedFocusedBackground": "#106ebe",
    "brandedFocusedBorder": undefined,
    "brandedFocusedContent": "#ffffff",
    "brandedFocusedIcon": "#ffffff",
    "brandedFocusedSecondaryContent": "#faf9f8",
    "brandedHoveredBackground": "#106ebe",
    "brandedHoveredBorder": undefined,
    "brandedHoveredContent": "#ffffff",
    "brandedHoveredIcon": "#ffffff",
    "brandedHoveredSecondaryContent": "#faf9f8",
    "brandedIcon": "#ffffff",
    "brandedPressedBackground": "#005a9e",
    "brandedPressedBorder": undefined,
    "brandedPressedContent": "#ffffff",
    "brandedPressedIcon": "#ffffff",
    "brandedPressedSecondaryContent": "#faf9f8",
    "brandedSecondaryContent": "#faf9f8",
    "buttonBackground": "#f3f2f1",
    "buttonBackgroundChecked": "#c8c6c4",
    "buttonBackgroundCheckedHovered": "#edebe9",
    "buttonBackgroundDisabled": "#f3f2f1",
    "buttonBackgroundHovered": "#edebe9",
    "buttonBackgroundPressed": "#edebe9",
    "buttonBorder": "#8a8886",
    "buttonBorderDisabled": "#f3f2f1",
    "buttonBorderFocused": "#8a8886",
    "buttonText": "#323130",
    "buttonTextChecked": "#201f1e",
    "buttonTextCheckedHovered": "#000000",
    "buttonTextDisabled": "#a19f9d",
    "buttonTextHovered": "#201f1e",
    "buttonTextPressed": "#201f1e",
    "checkboxBackground": "#0078d4",
    "checkboxBackgroundDisabled": "#f3f2f1",
    "checkboxBorderColor": "#8a8886",
    "checkmarkColor": "#ffffff",
    "defaultBackground": "#f3f2f1",
    "defaultBorder": "#8a8886",
    "defaultCheckedBackground": "#c8c6c4",
    "defaultCheckedContent": "#201f1e",
    "defaultCheckedHoveredBackground": "#edebe9",
    "defaultCheckedHoveredContent": "#201f1e",
    "defaultContent": "#323130",
    "defaultDisabledBackground": "#f3f2f1",
    "defaultDisabledBorder": "#f3f2f1",
    "defaultDisabledContent": "#a19f9d",
    "defaultDisabledIcon": "#a19f9d",
    "defaultDisabledSecondaryContent": "#a19f9d",
    "defaultFocusedBackground": "#edebe9",
    "defaultFocusedBorder": "#8a8886",
    "defaultFocusedContent": "#201f1e",
    "defaultFocusedIcon": "#201f1e",
    "defaultHoveredBackground": "#edebe9",
    "defaultHoveredBorder": "#8a8886",
    "defaultHoveredContent": "#201f1e",
    "defaultHoveredIcon": "#201f1e",
    "defaultHoveredSecondaryContent": "#a19f9d",
    "defaultIcon": "#323130",
    "defaultPressedBackground": "#edebe9",
    "defaultPressedBorder": "#8a8886",
    "defaultPressedContent": "#201f1e",
    "defaultPressedIcon": "#201f1e",
    "defaultPressedSecondaryContent": "#a19f9d",
    "defaultStateBackground": "#faf9f8",
    "disabledBackground": "#f3f2f1",
    "disabledBodySubtext": "#c8c6c4",
    "disabledBodyText": "#a19f9d",
    "disabledSubtext": "#d2d0ce",
    "disabledText": "#a19f9d",
    "errorBackground": "rgba(245, 135, 145, .2)",
    "errorText": "#a4262c",
    "focusBorder": "#605e5c",
    "ghostBackground": "#ffffff",
    "ghostBorder": "#ffffff",
    "ghostCheckedBackground": "#edebe9",
    "ghostCheckedContent": "#000000",
    "ghostCheckedHoveredBackground": "#f3f2f1",
    "ghostCheckedHoveredBorder": "#201f1e",
    "ghostCheckedHoveredContent": "#201f1e",
    "ghostContent": "#323130",
    "ghostDisabledBackground": "#ffffff",
    "ghostDisabledBorder": "#ffffff",
    "ghostDisabledContent": "#a19f9d",
    "ghostDisabledIcon": "#a19f9d",
    "ghostFocusedBackground": "#f3f2f1",
    "ghostFocusedBorder": "#8a8886",
    "ghostFocusedContent": "#201f1e",
    "ghostFocusedIcon": "#201f1e",
    "ghostFocusedSecondaryContent": "#605e5c",
    "ghostHoveredBackground": "#f3f2f1",
    "ghostHoveredBorder": "#f3f2f1",
    "ghostHoveredContent": "#201f1e",
    "ghostHoveredIcon": "#201f1e",
    "ghostHoveredSecondaryContent": "#605e5c",
    "ghostIcon": "#323130",
    "ghostPressedBackground": "#edebe9",
    "ghostPressedBorder": "#edebe9",
    "ghostPressedContent": "#201f1e",
    "ghostPressedIcon": "#201f1e",
    "ghostPressedSecondaryContent": "#605e5c",
    "ghostSecondaryContent": "#605e5c",
    "inputBackground": "#ffffff",
    "inputBackgroundChecked": "#0078d4",
    "inputBackgroundCheckedHovered": "#106ebe",
    "inputBorder": "#a19f9d",
    "inputBorderHovered": "#323130",
    "inputFocusBorderAlt": "#0078d4",
    "inputForegroundChecked": "#ffffff",
    "inputPlaceholderText": "#605e5c",
    "inputText": "#323130",
    "inputTextHovered": "#201f1e",
    "link": "#0078d4",
    "linkHovered": undefined,
    "linkPressed": "#005a9e",
    "listBackground": "#ffffff",
    "listHeaderBackgroundHovered": "#f3f2f1",
    "listHeaderBackgroundPressed": "#edebe9",
    "listItemBackgroundChecked": "#edebe9",
    "listItemBackgroundCheckedHovered": "#e1dfdd",
    "listItemBackgroundHovered": "#f3f2f1",
    "listText": "#323130",
    "menuBackground": "#ffffff",
    "menuDivider": "#c8c6c4",
    "menuHeader": "#0078d4",
    "menuIcon": "#0078d4",
    "menuItemBackgroundHovered": "#f3f2f1",
    "menuItemBackgroundPressed": "#edebe9",
    "menuItemText": "#323130",
    "menuItemTextHovered": "#201f1e",
    "neutralBackground1": "#000000",
    "neutralBackground1Hover": undefined,
    "neutralBackground1Pressed": "#2e2e2e",
    "neutralBackground1Selected": "#242424",
    "neutralBackground2": "#1f1f1f",
    "neutralBackground2Hover": undefined,
    "neutralBackground2Pressed": "#4d4d4d",
    "neutralBackground2Selected": "#424242",
    "neutralBackground3": "#ffffff",
    "neutralBackground3Hover": undefined,
    "neutralBackground3Pressed": "#e0e0e0",
    "neutralBackground3Selected": "#ebebeb",
    "neutralBackground4": "#333333",
    "neutralBackground4Hover": undefined,
    "neutralBackground4Pressed": "#616161",
    "neutralBackground4Selected": "#575757",
    "neutralBackground5": "#3d3d3d",
    "neutralBackground5Hover": undefined,
    "neutralBackground5Pressed": "#6b6b6b",
    "neutralBackground5Selected": "#616161",
    "neutralBackground6": "#5c5c5c",
    "neutralBackgroundDisabled": "#e0e0e0",
    "neutralBackgroundInverted": "#575757",
    "neutralForeground1": "#242424",
    "neutralForeground1Hover": undefined,
    "neutralForeground1Pressed": undefined,
    "neutralForeground1Selected": undefined,
    "neutralForeground2": "#616161",
    "neutralForeground2BrandHover": undefined,
    "neutralForeground2BrandPressed": undefined,
    "neutralForeground2BrandSelected": undefined,
    "neutralForeground2Hover": undefined,
    "neutralForeground2Pressed": undefined,
    "neutralForeground2Selected": undefined,
    "neutralForeground3": "#808080",
    "neutralForeground3BrandHover": undefined,
    "neutralForeground3BrandPressed": undefined,
    "neutralForeground3BrandSelected": undefined,
    "neutralForeground3Hover": undefined,
    "neutralForeground3Pressed": undefined,
    "neutralForeground3Selected": undefined,
    "neutralForegroundInverted": "#ffffff",
    "neutralStencil1": "#575757",
    "neutralStencil2": "#333333",
    "neutralStroke1": "#d1d1d1",
    "neutralStroke1Hover": undefined,
    "neutralStroke1Pressed": undefined,
    "neutralStroke1Selected": undefined,
    "neutralStroke2": "#e0e0e0",
    "neutralStrokeAccessible": "#616161",
    "neutralStrokeAccessibleHover": undefined,
    "neutralStrokeAccessiblePressed": undefined,
    "neutralStrokeAccessibleSelected": undefined,
    "neutralStrokeDisabled": "#e0e0e0",
    "personaActivityGlow": "#0078d4",
    "personaActivityRing": "#ffffff",
    "primaryButtonBackground": "#0078d4",
    "primaryButtonBackgroundDisabled": "#f3f2f1",
    "primaryButtonBackgroundHovered": "#106ebe",
    "primaryButtonBackgroundPressed": "#005a9e",
    "primaryButtonBorder": "transparent",
    "primaryButtonBorderFocused": "transparent",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#d2d0ce",
    "primaryButtonTextHovered": "#ffffff",
    "primaryButtonTextPressed": "#ffffff",
    "smallInputBorder": "#605e5c",
    "subText": "#605e5c",
    "successBackground": "rgba(95, 210, 85, .2)",
    "variantBorder": "#edebe9",
    "variantBorderHovered": "#a19f9d",
    "warningBackground": "rgba(255, 200, 10, .2)",
    "warningHighlight": "#ffb900",
    "warningText": "#333333",
  },
  "components": Object {},
  "host": Object {
    "appearance": "light",
  },
  "shadows": Object {
    "shadow16": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 16,
        "color": "#00000024",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 2,
        "color": "#00000024",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 28,
        "color": "#0000003d",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 4,
        "color": "#00000024",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 64,
        "color": "#0000003d",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": Object {
      "ambient": Object {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 8,
        "color": "#00000024",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": Object {
      "ambient": Object {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": Object {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": Object {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
  "stroke": Object {
    "width": Object {},
  },
  "typography": Object {
    "families": Object {
      "cursive": "System",
      "monospace": "System",
      "primary": "Segoe UI",
      "sansSerif": "System",
      "secondary": "Segoe UI",
      "serif": "System",
    },
    "sizes": Object {
      "body": 14,
      "caption": 12,
      "header": 18,
      "hero": 24,
      "heroLarge": 60,
      "secondary": 13,
      "subheader": 16,
    },
    "variants": Object {
      "body1": Object {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "body1Strong": Object {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "body2": Object {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "body2Strong": Object {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodySemibold": Object {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodyStandard": Object {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "caption1": Object {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "captionStandard": Object {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "display": Object {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "headerSemibold": Object {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "headerStandard": Object {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "heroLargeSemibold": Object {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "heroLargeStandard": Object {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "heroSemibold": Object {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
      "heroStandard": Object {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "largeTitle": Object {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "secondarySemibold": Object {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "secondaryStandard": Object {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "subheaderSemibold": Object {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "subheaderStandard": Object {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle1": Object {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "subtitle1Strong": Object {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "subtitle2": Object {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle2Strong": Object {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "title1": Object {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "title1Strong": Object {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
    },
    "weights": Object {
      "regular": "400",
      "semiBold": "600",
    },
  },
}
`;

exports[`createMacOSColorAliasTokens test mode: dark, isHighContrast: false 1`] = `
Object {
  "neutralBackground1": "#000000",
  "neutralBackground1Hover": "#3d3d3d",
  "neutralBackground1Pressed": "#5c5c5c",
  "neutralBackground1Selected": "#383838",
  "neutralBackground2": "#575757",
  "neutralBackground2Hover": "#333333",
  "neutralBackground2Pressed": "#707070",
  "neutralBackground2Selected": "#2e2e2e",
  "neutralBackground3": "#575757",
  "neutralBackground3Hover": "#292929",
  "neutralBackground3Pressed": "#0a0a0a",
  "neutralBackground3Selected": "#242424",
  "neutralBackground4": "#1f1f1f",
  "neutralBackground4Hover": "#1f1f1f",
  "neutralBackground4Pressed": "#000000",
  "neutralBackground4Selected": "#1a1a1a",
  "neutralBackground5": "#5c5c5c",
  "neutralBackground5Hover": "#141414",
  "neutralBackground5Pressed": "#050505",
  "neutralBackground5Selected": "#0f0f0f",
  "neutralBackground6": "#333333",
  "neutralBackgroundDisabled": "#575757",
  "neutralBackgroundInverted": "#ffffff",
  "neutralForeground1": "#ffffff",
  "neutralForeground1Hover": "#ffffff",
  "neutralForeground1Pressed": "#ffffff",
  "neutralForeground1Selected": "#ffffff",
  "neutralForeground2": "#ffffff",
  "neutralForeground2BrandHover": "#092c47",
  "neutralForeground2BrandPressed": "#0078d4",
  "neutralForeground2BrandSelected": "#092c47",
  "neutralForeground2Hover": "#ffffff",
  "neutralForeground2Pressed": "#ffffff",
  "neutralForeground2Selected": "#ffffff",
  "neutralForeground3": "#adadad",
  "neutralForeground3BrandHover": "#092c47",
  "neutralForeground3BrandPressed": "#0078d4",
  "neutralForeground3BrandSelected": "#092c47",
  "neutralForeground3Hover": "#d6d6d6",
  "neutralForeground3Pressed": "#d6d6d6",
  "neutralForeground3Selected": "#d6d6d6",
  "neutralForegroundInverted": "#ffffff",
  "neutralStencil1": "#333333",
  "neutralStencil2": "#575757",
  "neutralStroke1": "#3d3d3d",
  "neutralStroke1Hover": "#757575",
  "neutralStroke1Pressed": "#6b6b6b",
  "neutralStroke1Selected": "#707070",
  "neutralStroke2": "#575757",
  "neutralStrokeAccessible": "#adadad",
  "neutralStrokeAccessibleHover": "#bdbdbd",
  "neutralStrokeAccessiblePressed": "#b3b3b3",
  "neutralStrokeAccessibleSelected": "#0086f0",
  "neutralStrokeDisabled": "#525252",
}
`;

exports[`createMacOSColorAliasTokens test mode: dark, isHighContrast: true 1`] = `
Object {
  "neutralBackground1": "#000000",
  "neutralBackground1Hover": "#3d3d3d",
  "neutralBackground1Pressed": "#5c5c5c",
  "neutralBackground1Selected": "#383838",
  "neutralBackground2": "#575757",
  "neutralBackground2Hover": "#333333",
  "neutralBackground2Pressed": "#707070",
  "neutralBackground2Selected": "#2e2e2e",
  "neutralBackground3": "#575757",
  "neutralBackground3Hover": "#292929",
  "neutralBackground3Pressed": "#0a0a0a",
  "neutralBackground3Selected": "#242424",
  "neutralBackground4": "#1f1f1f",
  "neutralBackground4Hover": "#1f1f1f",
  "neutralBackground4Pressed": "#000000",
  "neutralBackground4Selected": "#1a1a1a",
  "neutralBackground5": "#5c5c5c",
  "neutralBackground5Hover": "#141414",
  "neutralBackground5Pressed": "#050505",
  "neutralBackground5Selected": "#0f0f0f",
  "neutralBackground6": "#333333",
  "neutralBackgroundDisabled": "#575757",
  "neutralBackgroundInverted": "#ffffff",
  "neutralForeground1": "#ffffff",
  "neutralForeground1Hover": "#ffffff",
  "neutralForeground1Pressed": "#ffffff",
  "neutralForeground1Selected": "#ffffff",
  "neutralForeground2": "#ffffff",
  "neutralForeground2BrandHover": "#092c47",
  "neutralForeground2BrandPressed": "#0078d4",
  "neutralForeground2BrandSelected": "#092c47",
  "neutralForeground2Hover": "#ffffff",
  "neutralForeground2Pressed": "#ffffff",
  "neutralForeground2Selected": "#ffffff",
  "neutralForeground3": "#d6d6d6",
  "neutralForeground3BrandHover": "#092c47",
  "neutralForeground3BrandPressed": "#0078d4",
  "neutralForeground3BrandSelected": "#092c47",
  "neutralForeground3Hover": "#d6d6d6",
  "neutralForeground3Pressed": "#d6d6d6",
  "neutralForeground3Selected": "#d6d6d6",
  "neutralForegroundInverted": "#ffffff",
  "neutralStencil1": "#333333",
  "neutralStencil2": "#575757",
  "neutralStroke1": "#adadad",
  "neutralStroke1Hover": "#757575",
  "neutralStroke1Pressed": "#6b6b6b",
  "neutralStroke1Selected": "#707070",
  "neutralStroke2": "#a8a8a8",
  "neutralStrokeAccessible": "#d6d6d6",
  "neutralStrokeAccessibleHover": "#bdbdbd",
  "neutralStrokeAccessiblePressed": "#b3b3b3",
  "neutralStrokeAccessibleSelected": "#0086f0",
  "neutralStrokeDisabled": "#525252",
}
`;

exports[`createMacOSColorAliasTokens test mode: light, isHighContrast: false 1`] = `
Object {
  "neutralBackground1": "#ffffff",
  "neutralBackground1Hover": "#f5f5f5",
  "neutralBackground1Pressed": "#ebebeb",
  "neutralBackground1Selected": "#ebebeb",
  "neutralBackground2": "#ffffff",
  "neutralBackground2Hover": "#f0f0f0",
  "neutralBackground2Pressed": "#ebebeb",
  "neutralBackground2Selected": "#e6e6e6",
  "neutralBackground3": "#f5f5f5",
  "neutralBackground3Hover": "#ebebeb",
  "neutralBackground3Pressed": "#d6d6d6",
  "neutralBackground3Selected": "#e0e0e0",
  "neutralBackground4": "#f0f0f0",
  "neutralBackground4Hover": "#fafafa",
  "neutralBackground4Pressed": "#f5f5f5",
  "neutralBackground4Selected": "#ffffff",
  "neutralBackground5": "#ebebeb",
  "neutralBackground5Hover": "#f5f5f5",
  "neutralBackground5Pressed": "#f0f0f0",
  "neutralBackground5Selected": "#fafafa",
  "neutralBackground6": "#e6e6e6",
  "neutralBackgroundDisabled": "#f0f0f0",
  "neutralBackgroundInverted": "#616161",
  "neutralForeground1": "#242424",
  "neutralForeground1Hover": "#242424",
  "neutralForeground1Pressed": "#242424",
  "neutralForeground1Selected": "#242424",
  "neutralForeground2": "#000000",
  "neutralForeground2BrandHover": "#106ebe",
  "neutralForeground2BrandPressed": "#004578",
  "neutralForeground2BrandSelected": "#005a9e",
  "neutralForeground2Hover": "#242424",
  "neutralForeground2Pressed": "#242424",
  "neutralForeground2Selected": "#242424",
  "neutralForeground3": "#616161",
  "neutralForeground3BrandHover": "#106ebe",
  "neutralForeground3BrandPressed": "#004578",
  "neutralForeground3BrandSelected": "#005a9e",
  "neutralForeground3Hover": "#424242",
  "neutralForeground3Pressed": "#424242",
  "neutralForeground3Selected": "#424242",
  "neutralForegroundInverted": "#ffffff",
  "neutralStencil1": "#e6e6e6",
  "neutralStencil2": "#fafafa",
  "neutralStroke1": "#f0f0f0",
  "neutralStroke1Hover": "#c7c7c7",
  "neutralStroke1Pressed": "#b3b3b3",
  "neutralStroke1Selected": "#bdbdbd",
  "neutralStroke2": "#d6d6d6",
  "neutralStrokeAccessible": "#616161",
  "neutralStrokeAccessibleHover": "#575757",
  "neutralStrokeAccessiblePressed": "#4d4d4d",
  "neutralStrokeAccessibleSelected": "#0078d4",
  "neutralStrokeDisabled": "#e0e0e0",
}
`;

exports[`createMacOSColorAliasTokens test mode: light, isHighContrast: true 1`] = `
Object {
  "neutralBackground1": "#ffffff",
  "neutralBackground1Hover": "#f5f5f5",
  "neutralBackground1Pressed": "#ebebeb",
  "neutralBackground1Selected": "#ebebeb",
  "neutralBackground2": "#ffffff",
  "neutralBackground2Hover": "#f0f0f0",
  "neutralBackground2Pressed": "#ebebeb",
  "neutralBackground2Selected": "#e6e6e6",
  "neutralBackground3": "#f5f5f5",
  "neutralBackground3Hover": "#ebebeb",
  "neutralBackground3Pressed": "#d6d6d6",
  "neutralBackground3Selected": "#e0e0e0",
  "neutralBackground4": "#f0f0f0",
  "neutralBackground4Hover": "#fafafa",
  "neutralBackground4Pressed": "#f5f5f5",
  "neutralBackground4Selected": "#ffffff",
  "neutralBackground5": "#ebebeb",
  "neutralBackground5Hover": "#f5f5f5",
  "neutralBackground5Pressed": "#f0f0f0",
  "neutralBackground5Selected": "#fafafa",
  "neutralBackground6": "#e6e6e6",
  "neutralBackgroundDisabled": "#f0f0f0",
  "neutralBackgroundInverted": "#616161",
  "neutralForeground1": "#000000",
  "neutralForeground1Hover": "#000000",
  "neutralForeground1Pressed": "#000000",
  "neutralForeground1Selected": "#000000",
  "neutralForeground2": "#000000",
  "neutralForeground2BrandHover": "#106ebe",
  "neutralForeground2BrandPressed": "#004578",
  "neutralForeground2BrandSelected": "#005a9e",
  "neutralForeground2Hover": "#242424",
  "neutralForeground2Pressed": "#242424",
  "neutralForeground2Selected": "#242424",
  "neutralForeground3": "#000000",
  "neutralForeground3BrandHover": "#106ebe",
  "neutralForeground3BrandPressed": "#004578",
  "neutralForeground3BrandSelected": "#005a9e",
  "neutralForeground3Hover": "#424242",
  "neutralForeground3Pressed": "#424242",
  "neutralForeground3Selected": "#424242",
  "neutralForegroundInverted": "#ffffff",
  "neutralStencil1": "#e6e6e6",
  "neutralStencil2": "#fafafa",
  "neutralStroke1": "#616161",
  "neutralStroke1Hover": "#c7c7c7",
  "neutralStroke1Pressed": "#b3b3b3",
  "neutralStroke1Selected": "#bdbdbd",
  "neutralStroke2": "#000000",
  "neutralStrokeAccessible": "#242424",
  "neutralStrokeAccessibleHover": "#575757",
  "neutralStrokeAccessiblePressed": "#4d4d4d",
  "neutralStrokeAccessibleSelected": "#0078d4",
  "neutralStrokeDisabled": "#e0e0e0",
}
`;

exports[`createMacOSShadowAliasTokens test mode: dark, isHighContrast: false 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: dark, isHighContrast: true 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: light, isHighContrast: false 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000024",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000024",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000003d",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000024",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000033",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000003d",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000001f",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000024",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;

exports[`createMacOSShadowAliasTokens test mode: light, isHighContrast: true 1`] = `
Object {
  "shadow16": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000047",
      "x": 0,
      "y": 8,
    },
  },
  "shadow16brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 16,
      "color": "#00000040",
      "x": 0,
      "y": 8,
    },
  },
  "shadow2": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000047",
      "x": 0,
      "y": 1,
    },
  },
  "shadow28": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#0000007a",
      "x": 0,
      "y": 14,
    },
  },
  "shadow28brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 28,
      "color": "#00000040",
      "x": 0,
      "y": 14,
    },
  },
  "shadow2brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 2,
      "color": "#00000040",
      "x": 0,
      "y": 1,
    },
  },
  "shadow4": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000047",
      "x": 0,
      "y": 2,
    },
  },
  "shadow4brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 4,
      "color": "#00000040",
      "x": 0,
      "y": 2,
    },
  },
  "shadow64": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#00000066",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#0000007a",
      "x": 0,
      "y": 32,
    },
  },
  "shadow64brand": Object {
    "ambient": Object {
      "blur": 8,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 64,
      "color": "#00000040",
      "x": 0,
      "y": 32,
    },
  },
  "shadow8": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000003d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000047",
      "x": 0,
      "y": 4,
    },
  },
  "shadow8brand": Object {
    "ambient": Object {
      "blur": 2,
      "color": "#0000004d",
      "x": 0,
      "y": 0,
    },
    "key": Object {
      "blur": 8,
      "color": "#00000040",
      "x": 0,
      "y": 4,
    },
  },
}
`;
